--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,12 @@ before_install:
   - docker -v
   # set env vars in the build settings to interact with repositories
   # see https://docs.travis-ci.com/user/environment-variables/#Defining-Variables-in-Repository-Settings
-  - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
+  # - docker login -u="$DOCKER_USERNAME" -p="$DOCKER_PASSWORD"
 script:
   - docker build -t "zopanix/factorio:${TRAVIS_TAG}" .
-deploy:
-  provider: script
-  script: docker tag "zopanix/factorio:${TRAVIS_TAG}" "zopanix/factorio:latest" && docker push "zopanix/factorio:${TRAVIS_TAG}" && docker push "zopanix/factorio:latest"
-  skip_cleanup: false
-  on:
-    tags: true
+#deploy:
+#  provider: script
+#  script: docker tag "zopanix/factorio:${TRAVIS_TAG}" "zopanix/factorio:latest" && docker push "zopanix/factorio:${TRAVIS_TAG}" && docker push "zopanix/factorio:latest"
+#  skip_cleanup: false
+#  on:
+#    tags: true
